syntax = "proto3";
package permissions;

import "github.com/fuserobotics/proto/common/common.proto";

/*
  SystemPermissions: full list of possible permissions
*/
message SystemPermissions {
  /* all permissions */
  bool all_permissions = 1;
  /* Create / delete regions */
  bool manage_regions = 2;
  /* Create / delete devices */
  bool manage_devices = 3;
  /* View / general basic access */
  bool access = 4;
}
